<resources>
    <string name="app_name">shadow matching</string>
    <string name="empty">Press "START" to play game</string>
    <string name="reload">RESTART</string>
    <string name="back">backbutton</string>
    <string name="score">Score :</string>
    <string name="next">Next</string>
    <string name="exit">EXIT</string>
    <string name="right_text">Right  \u0020\u0020:</string>
    <string name="wrong_text">Wrong :</string>
    <string name="level_text">Level \u0020:</string>
    <string name="gameover">Game Over</string>
    <string name="accuracy_text">Accuracy  \u0020:</string>

</resources>
